Bisect -> Fill segfault in latest builds. #48667

Closed
opened 2016-06-17 11:29:29 +02:00 by Daniel · 5 comments

System Information
Fedora Linux 23, GTX 770 (render) and Quadro 2000 (display)
Mac OSX 10.11.5, Mac Mini Intel HD Graphics 4000

Blender Version
Broken: f0c7a2a, 049f715, d747bfb
Worked: 2.77a (abf6f08), 2.77, etc.

Short description of error

The bisect tool segfaults blender when you click the 'fill' checkbox after cutting.

Exact steps for others to reproduce the error
(In edit-mode)

  • Select the bisect tool and drag a line across the default cube.
  • Click the 'fill' checkbox in the tool options.
    SEGFAULT.

bisect-bug.blend
bisect-bug.crash.txt

**System Information** Fedora Linux 23, GTX 770 (render) and Quadro 2000 (display) Mac OSX 10.11.5, Mac Mini Intel HD Graphics 4000 **Blender Version** Broken: f0c7a2a, 049f715, d747bfb Worked: 2.77a (abf6f08), 2.77, etc. **Short description of error** The bisect tool segfaults blender when you click the 'fill' checkbox after cutting. **Exact steps for others to reproduce the error** (In edit-mode) - Select the bisect tool and drag a line across the default cube. - Click the 'fill' checkbox in the tool options. SEGFAULT. [bisect-bug.blend](https://archive.blender.org/developer/F317412/bisect-bug.blend) [bisect-bug.crash.txt](https://archive.blender.org/developer/F317413/bisect-bug.crash.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DanielFairhead

Added subscriber: @DanielFairhead
Campbell Barton self-assigned this 2016-06-17 11:44:46 +02:00

This is caused by aedeca7d1c but seems it is infact a bug in bisect which is triggered by having a larger freeword variable, not mempool, checking further.

This is caused by aedeca7d1c but seems it is infact a bug in bisect which is triggered by having a larger `freeword` variable, not mempool, checking further.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by bcde045b32

This issue was referenced by bcde045b32af9fcbb68ea616da5c6a4df81f7582
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48667
No description provided.