Fix T48667: Bisect-fill crash

BMO iterator would loop over removed faces.

Recent changes to mempool FREEWORD size exposed this bug.